reworking BuyDeck to be clearer